# fasthisto

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cargo.sh  cbindgen.toml  requirements-dev.txt  run.sh  rust_test.c  rust_test.h  setup.py
src/: index.rs  lib.rs  range.rs
