[package]
name = "rust_test2"
version = "0.1.0"
authors = ["6br <tfdvrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_test"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bam = "*"
#bigtools = "*"
bitpacking = "0.5" # Pfor
flate2 = "1.0" # A streaming compression/decompression library
log = "*"
regex = "*" 
serde = "*"
#serde_derive = "*"
serde_json = "*"
serde_yaml = "*"