[package]
name = "rust_test2"
version = "0.1.0"
authors = ["6br <tfdvrt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_test2"
crate-type = ["staticlib", "cdylib"]
path= "src/lib.rs"

[[bin]]
name = "rust_test"
path = "bin/bin.rs"

[dependencies]
bam = "*"
#bigtools = { version = "*", default-features = false }
#bigtools = "*"
#mayda = "0.2"
bitpacking = "0.5" # Pfor
clap = "*"
deflate = "*"
flate2 = "1.0" # A streaming compression/decompression library
log = "*"
numpress = "1.0"
plotters = "*"
regex = "*" 
serde = "*"
serde_json = "*"
serde_yaml = "*"